Simple showing selection

--- a/src/main/sass/index.scss
+++ b/src/main/sass/index.scss
@@ -1,3 +1,7 @@
+@import "components/app";
+@import "components/banner";
+@import "components/seatSelect";
+
 body {
-  background: pink;
+  margin: 0;
 }
