Add admin page, overhaul app
Commits squashed to avoid accidentally leaking bits of the model
solution

--- a/src/main/sass/index.scss
+++ b/src/main/sass/index.scss
@@ -1,6 +1,10 @@
 @import "components/app";
-@import "components/banner";
 @import "components/seatSelect";
+@import "components/spinner";
+@import "components/admin";
+@import "components/booking";
+@import "components/errorModal";
+@import "components/errorBoundary";
 
 body {
   margin: 0;
