--- a/src/main/sass/components/_app.scss
+++ b/src/main/sass/components/_app.scss
@@ -1,22 +1,111 @@
+$title-font: 'Amatic SC', cursive;
+$paragraph-font: 'Open Sans Condensed', sans-serif;
+$brand-colour: #ccf5ff;
+$dark-brand-colour: darken($brand-colour, 30%);
+
 .app {
-  background: #404080;
-  color: white;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: $paragraph-font;
   min-height: 100vh;
 
-  // Flex configuration
-  display: flex;
+  h1 {
+    font-family: $title-font;
+  }
 
   .main-content {
-    flex: 0 1 800px;
+    width: 960px;
+    margin: auto;
   }
 
-  .curtain {
-    flex: 1 0 auto;
+  ul.app-navbar {
+
+    list-style-type: none;
+    margin-top: 1rem;
+    padding: 0;
+    overflow: hidden;
+
+    li {
+      display: block;
+      font-family: $title-font;
+      float: left;
+      font-size: 4rem;
+
+      a {
+        text-decoration: none;
+        color: black;
+        &:hover {
+          color: $dark-brand-colour;
+        }
+      }
+    }
   }
 
-  // Curtain styling
-  .curtain {
-    background: darkred;
+  table {
+    width: 100%;
+    border-collapse: collapse;
+
+    th, td {
+      padding: 0.2rem 0.5rem;
+      text-align: left;
+    }
+
+    th {
+      border-bottom: 1px solid;
+    }
+  }
+
+  .centered-form-container {
+    width: 600px;
+    display: block;
+    margin: 4rem auto;
+    text-align: center;
+
+    form {
+      display: grid;
+      grid-template-columns: 150px 1fr;
+      grid-gap: 10px;
+      label {
+        grid-column: 1/2;
+      }
+      input,button {
+        grid-column: 2/3;
+      }
+    }
+  }
+
+  form {
+    button {
+      background-color: $brand-colour;
+      &:hover {
+        background-color: $dark-brand-colour
+      }
+      width: 100%
+    }
+
+    button, input {
+      border: 1px solid grey;
+      border-radius: 4px;
+      height: 1.5rem;
+    }
+  }
+
+  button.delete {
+    border: none;
+    background-color: transparent;
+    margin-left: 1rem;
+    text-decoration: none;
+    outline:none;
+    width: 1rem;
+    color: $dark-brand-colour;
+    &:hover {
+      color: $brand-colour
+    }
+  }
+
+  .pull-left {
+    float: left;
+  }
+
+  .pull-right {
+    float: right;
   }
 }
