--- a/src/main/sass/components/_app.scss
+++ b/src/main/sass/components/_app.scss
@@ -1,5 +1,3 @@
-$title-font: 'Amatic SC', cursive;
-$paragraph-font: 'Open Sans Condensed', sans-serif;
 $brand-colour: #ccf5ff;
 $dark-brand-colour: darken($brand-colour, 30%);
 
@@ -14,29 +12,6 @@ $dark-brand-colour: darken($brand-colour, 30%);
   .main-content {
     width: 960px;
     margin: auto;
-  }
-
-  ul.app-navbar {
-
-    list-style-type: none;
-    margin-top: 1rem;
-    padding: 0;
-    overflow: hidden;
-
-    li {
-      display: block;
-      font-family: $title-font;
-      float: left;
-      font-size: 4rem;
-
-      a {
-        text-decoration: none;
-        color: black;
-        &:hover {
-          color: $dark-brand-colour;
-        }
-      }
-    }
   }
 
   table {
@@ -72,21 +47,21 @@ $dark-brand-colour: darken($brand-colour, 30%);
     }
   }
 
-  form {
-    button {
-      background-color: $brand-colour;
-      &:hover {
-        background-color: $dark-brand-colour
-      }
-      width: 100%
-    }
-
-    button, input {
-      border: 1px solid grey;
-      border-radius: 4px;
-      height: 1.5rem;
-    }
-  }
+  //form {
+  //  button {
+  //    background-color: $brand-colour;
+  //    &:hover {
+  //      background-color: $dark-brand-colour
+  //    }
+  //    width: 100%
+  //  }
+  //
+  //  button, input {
+  //    border: 1px solid grey;
+  //    border-radius: 4px;
+  //    height: 1.5rem;
+  //  }
+  //}
 
   button.delete {
     border: none;
