--- a/src/main/sass/components/_spinner.scss
+++ b/src/main/sass/components/_spinner.scss
@@ -12,7 +12,7 @@
   display: inline-block;
   width: 64px;
   height: 64px;
-  margin: auto;
+  margin: 48px auto;
 }
 
 .spinner:after {
@@ -22,8 +22,8 @@
   height: 46px;
   margin: 1px;
   border-radius: 50%;
-  border: 5px solid #000 !important;
-  border-color: #000 transparent #000 transparent !important;
+  border: 5px solid $primary-colour !important;
+  border-color: $primary-colour transparent $primary-colour transparent !important;
   animation: spinner 1.2s linear infinite;
 }
 
