Update colour scheme

--- a/src/main/sass/_global.scss
+++ b/src/main/sass/_global.scss
@@ -1,5 +1,8 @@
-$background-colour: #2a41a8;
-$primary-colour: #f8f522;
+$background-colour: #ebebeb;
+$primary-colour: #31305a;
+$secondary-colour: #444444;
+$highlight-colour: #f1ef52;
+
 $title-font: 'Ink Free', cursive;//'Amatic SC', cursive;
 $paragraph-font: 'Open Sans Condensed', sans-serif;
 
