--- a/src/main/sass/index.scss
+++ b/src/main/sass/index.scss
@@ -5,10 +5,12 @@
 @import "components/admin";
 @import "components/app";
 @import "components/booking";
+@import "components/_bookingSuccess";
 @import "components/cinemaSelect";
 @import "components/errorBoundary";
 @import "components/errorModal";
 @import "components/navBar";
 @import "components/progressIndicator";
 @import "components/seatSelect";
+@import "components/showingSelect";
 @import "components/spinner";
