--- a/src/main/sass/components/_progressIndicator.scss
+++ b/src/main/sass/components/_progressIndicator.scss
@@ -1,6 +1,7 @@
 .progress-indicator {
 
-  $size: 80px;
+  $size: 60px;
+  $border-size: 2px;
   $ratio: 0.70710678118; // sqrt(2)/2
 
   display: flex;
@@ -11,20 +12,24 @@
     height: $size;
     margin-right: 32px;
     padding-left: $ratio * $size / 2;
-    flex: 1 0 auto;
+    flex: 1 0 20%;
 
-    font-size: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    font-size: 1.5rem;
     line-height: calc(#{$size} - 1rem);
 
-    border-top: 4px solid $primary-colour;
-    border-bottom: 4px solid $primary-colour;
-    border-radius: 4px;
+    border-top: $border-size solid $primary-colour;
+    border-bottom: $border-size solid $primary-colour;
+    border-radius: $border-size;
 
     box-sizing: border-box;
 
     // First step has a vertical left border
     &:first-of-type {
-      border-left: 4px solid $primary-colour;
+      border-left: $border-size solid $primary-colour;
       &:before {
         content: none;
       }
@@ -46,7 +51,6 @@
     content: '';
 
     position: absolute;
-    top: 8px;
     box-sizing: border-box;
 
     transform: rotate(45deg);
@@ -54,8 +58,8 @@
     width: $ratio * $size;
     height: $ratio * $size;
 
-    border-top: 4px solid $primary-colour;
-    border-right: 4px solid $primary-colour;
+    border-top: $border-size solid $primary-colour;
+    border-right: $border-size solid $primary-colour;
     border-radius: 4px;
   }
 
