--- a/src/main/sass/components/_seatSelect.scss
+++ b/src/main/sass/components/_seatSelect.scss
@@ -1,13 +1,13 @@
 .seat-select {
   margin-top: 28px;
 
-  border: 4px solid $primary-colour;
+  border: 2px solid $primary-colour;
 
   display: flex;
   flex-direction: column;
 
   .title-section {
-    background: darken($primary-colour, 10);
+    background: $primary-colour;
     color: $background-colour;
   }
 
@@ -15,6 +15,7 @@
     padding: 28px;
     display: flex;
     justify-content: space-around;
+    background: lighten($primary-colour, 30);
   }
 
   .seats {
@@ -28,10 +29,10 @@
       width: 100%;
       padding: 4px;
       margin-bottom: 4px;
-      background: lighten($primary-colour, 30);
-      color: $background-colour;
+      background: lighten($background-colour, 20);
+      color: $primary-colour;
 
-      border: 4px solid $primary-colour;
+      border: 2px solid lighten($primary-colour, 10);
       box-sizing: border-box;
     }
     .row {
@@ -46,16 +47,16 @@
     .seat {
       height: 24px;
       width: 24px;
-      border: 4px solid $primary-colour;
+      border: 4px solid $background-colour;
       border-radius: 4px;
       padding: 0;
       box-sizing: border-box;
-      background: $primary-colour;
+      background: $background-colour;
     }
 
     .booked {
-      background: #999;
-      border-color: #999;
+      background: $secondary-colour;
+      border-color: $secondary-colour;
 
       .dot {
         display: none;
@@ -78,7 +79,7 @@
       height: 16px;
       width: 16px;
       border-radius: 50%;
-      background: $background-colour;
+      background: $primary-colour;
     }
   }
 
@@ -106,19 +107,26 @@
       .seat-container, .label {
         flex: 0 0 auto;
       }
+
+      .label {
+        margin-left: 8px;
+        color: $background-colour;
+        font-size: 1.2rem;
+      }
     }
   }
 
   .submit-button {
     flex: 0 0 auto;
-    border: 4px solid $primary-colour;
-    background: lighten($primary-colour, 20);
+    border: 2px solid $primary-colour;
+    background: $background-colour;
     font-family: $title-font;
-    color: $background-colour;
-    font-size: 1.5rem;
+    color: $primary-colour;
+    font-size: 1.8rem;
 
     &:hover {
-      background: $primary-colour;
+      background: darken($background-colour, 20);
+      color: darken($primary-colour, 20);
     }
   }
 }
