Finish styling booking flow

--- a/src/main/sass/_global.scss
+++ b/src/main/sass/_global.scss
@@ -3,8 +3,8 @@ $primary-colour: #31305a;
 $secondary-colour: #444444;
 $highlight-colour: #f1ef52;
 
-$title-font: 'Ink Free', cursive;//'Amatic SC', cursive;
-$paragraph-font: 'Open Sans Condensed', sans-serif;
+$title-font: 'Ink Free', cursive;
+$paragraph-font: 'Calibri Light', sans-serif;
 
 body {
   margin: 0;
