--- a/src/main/sass/components/_cinemaSelect.scss
+++ b/src/main/sass/components/_cinemaSelect.scss
@@ -1,28 +1,4 @@
 .cinema-select {
-  margin-top: 28px;
-
-  border: 2px solid $primary-colour;
-
-  display: flex;
-  flex-direction: column;
-
-  .title-section {
-    background: $primary-colour;
-    color: $background-colour;
-
-    display: flex;
-
-    h1 {
-      flex: 1 0 auto;
-    }
-  }
-
-  .selection-section {
-    min-height: 200px;
-    padding: 28px;
-    background: lighten($primary-colour, 30);
-  }
-
   .cinema-select-form {
     display: flex;
 
@@ -37,7 +13,8 @@
       flex: 0 0 auto;
       height: 60px;
       width: 60px;
-      font-size: 50px;
+      font-size: 40px;
+      line-height: 40px;
       box-sizing: border-box;
     }
   }
@@ -54,11 +31,13 @@
     select {
       padding: 4px 8px;
       width: 100%;
+      height: 100%;
       border: none;
       box-shadow: none;
       background: transparent;
       background-image: none;
       -webkit-appearance: none;
+      -moz-appearance: none;
 
       font-family: $paragraph-font;
       font-size: 1.5rem;
